--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Stocks</string>
+    <string name="loading">Loading...</string>
+    <string name="error">Error loading stocks</string>
 </resources>
