--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Stocks</string>
     <string name="loading">Loading...</string>
     <string name="error">Error loading stocks</string>
+    <string name="current_time">Time: 168184532</string>
+    <string name="stocks">Stocks!</string>
 </resources>
